--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,6 +19,13 @@
     {{ orb.getHead()|raw }}
     {{ branding.getHead()|raw }}
 
+    <!--[if (gt IE 8)|!(IE)]><!-->
+    <link rel="stylesheet" href="{{ asset('css/main.css') }}"/>
+    <!--<![endif]-->
+    <!--[if (lt IE 9)&(!IEMobile)]><!-->
+    <link rel="stylesheet" href="{{ asset('css/main-ie.css') }}"/>
+    <link rel="stylesheet" href="{{ asset('css/print.css') }}" media="print"/>
+    <!--<![endif]-->
     {% block inline_head %}{% endblock %}
 
     <script>document.documentElement.className += ' has-js';</script>
