--- a/resources/assets/sass/base/_main.scss
+++ b/resources/assets/sass/base/_main.scss
@@ -8,8 +8,8 @@
 html {
     overflow-y: scroll;
     min-height: 100%;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased; // sass-lint:disable-line no-vendor-prefixes
+    -moz-osx-font-smoothing: grayscale; // sass-lint:disable-line no-vendor-prefixes
 }
 
 abbr[title] {
@@ -39,7 +39,7 @@ video {
 }
 
 .rsp-img {
-    @include transition(opacity 0.1s ease-in-out);
+    transition: opacity 0.1s ease-in-out;
     width: 100%;
     display: block;
 }
