--- a/resources/assets/sass/base/_print.scss
+++ b/resources/assets/sass/base/_print.scss
@@ -1,3 +1,4 @@
+// sass-lint:disable no-ids
 @include breakup-tweakpoint('print', 'print', true) {
     * {
         background: transparent !important;
