--- a/resources/assets/sass/generic/_extends.scss
+++ b/resources/assets/sass/generic/_extends.scss
@@ -41,11 +41,9 @@
     background-color: transparent;
     border: 0;
     overflow: hidden;
-    /* IE 6/7 fallback */
-    *text-indent: -9999px;
 
-    &:before {
-        content: "";
+    &::before {
+        content: '';
         display: block;
         width: 0;
         height: 150%;
