--- a/resources/assets/sass/gel/objects/_widths.scss
+++ b/resources/assets/sass/gel/objects/_widths.scss
@@ -119,15 +119,13 @@
     }
 }
 
-@include breakup-block('basic') {
-    @include gel-widths-setup();
-}
+@include gel-widths-setup();
 
 /**
  * Generate media-query scoped grids for each breakpoint name defined
  */
 @each $name in $gel-widths-breakpoints {
-    @include breakup-breakpoint($name) {
+    @include mq-range($name) {
         @include gel-widths-setup('#{$name}-');
     }
 }
