--- a/resources/assets/sass/generic/_extends_classes.scss
+++ b/resources/assets/sass/generic/_extends_classes.scss
@@ -56,7 +56,7 @@
     border-bottom-width: 1px;
 }
 
-@include breakup-breakpoint('bpw') {
+@include mq-range('bpw') {
     .list-lined > li {
         margin-bottom: $wide-spacing;
         padding-bottom: $wide-spacing;
@@ -187,7 +187,7 @@
     white-space: nowrap;
 }
 
-@include breakup-breakpoint('bpw') {
+@include mq-range('bpw') {
     .bpw-text--left {
         text-align: left;
     }
