--- a/resources/assets/sass/base/_print.scss
+++ b/resources/assets/sass/base/_print.scss
@@ -1,5 +1,5 @@
 // sass-lint:disable no-ids
-@include breakup-tweakpoint('print', 'print', true) {
+@include mq($media-type: 'print') {
     * {
         background: transparent !important;
         color: #000000 !important;
