--- a/resources/assets/sass/gel/objects/_grid.scss
+++ b/resources/assets/sass/gel/objects/_grid.scss
@@ -40,109 +40,107 @@ $gel-grid-gutter-basic-half: $gel-grid-gutter-basic / 2;
 $gel-grid-gutter-wide: 16px !default;
 $gel-grid-gutter-wide-half: $gel-grid-gutter-wide / 2;
 
-@include breakup-block('basic') {
-    #{$gel-class-prefix}grid-wrapper {
-        display: block;
-        margin-left: -$gel-grid-gutter-basic;
+#{$gel-class-prefix}grid-wrapper {
+    display: block;
+    margin-left: -$gel-grid-gutter-basic;
 
-        list-style: none;
-        margin-bottom: 0;
+    list-style: none;
+    margin-bottom: 0;
 
-        // Kill whitespace spacing
-        letter-spacing: -0.31em;
-        text-rendering: optimizeSpeed;
+    // Kill whitespace spacing
+    letter-spacing: -0.31em;
+    text-rendering: optimizeSpeed;
+    text-align: left;
+
+    // Clearfix
+    zoom: 1;
+
+    &::before,
+    &::after {
+        content: ' ';
+        display: table;
+    }
+
+    &::after {
+        clear: both;
+    }
+}
+
+// Opera as of 12 on Windows needs word-spacing. The ".opera" selector is
+// used to prevent actual prefocus styling and is not required in markup.
+.opera:-o-prefocus,
+#{$gel-class-prefix}grid-wrapper {
+    word-spacing: -0.43em;
+}
+
+#{$gel-class-prefix}grid {
+    display: inline-block;
+    vertical-align: top;
+
+    // In case people want to use a * { box-sizing: border-box; } declaration
+    // as per http://paulirish.com/2012/box-sizing-border-box-ftw/
+    box-sizing: content-box;
+
+    // Grid components have a default width so that you don't need to always
+    // use the .one-whole class for mobile-first implementations
+    width: 100%;
+}
+
+// Sometimes floated grids are preferable over inline-block grids. Useful if
+// we want to have a fixed width container next to a variable width one.
+#{$gel-class-prefix}grid-float {
+    float: left;
+
+    // Grid components have a default width so that you don't need to always
+    // use the .one-whole class for mobile-first implementations
+    width: 100%;
+}
+
+#{$gel-class-prefix}grid__inner {
+    padding-left: $gel-grid-gutter-basic;
+
+    // Reset whitespace spacing
+    letter-spacing: normal;
+    word-spacing: normal;
+    text-rendering: auto;
+}
+
+#{$gel-class-prefix}grid-wrapper--center {
+    text-align: center;
+
+    > #{$gel-class-prefix}grid {
         text-align: left;
-
-        // Clearfix
-        zoom: 1;
-
-        &::before,
-        &::after {
-            content: ' ';
-            display: table;
-        }
-
-        &::after {
-            clear: both;
-        }
     }
+}
 
-    // Opera as of 12 on Windows needs word-spacing. The ".opera" selector is
-    // used to prevent actual prefocus styling and is not required in markup.
-    .opera:-o-prefocus,
-    #{$gel-class-prefix}grid-wrapper {
-        word-spacing: -0.43em;
-    }
-
-    #{$gel-class-prefix}grid {
-        display: inline-block;
-        vertical-align: top;
-
-        // In case people want to use a * { box-sizing: border-box; } declaration
-        // as per http://paulirish.com/2012/box-sizing-border-box-ftw/
-        box-sizing: content-box;
-
-        // Grid components have a default width so that you don't need to always
-        // use the .one-whole class for mobile-first implementations
-        width: 100%;
-    }
-
-    // Sometimes floated grids are preferable over inline-block grids. Useful if
-    // we want to have a fixed width container next to a variable width one.
-    #{$gel-class-prefix}grid-float {
-        float: left;
-
-        // Grid components have a default width so that you don't need to always
-        // use the .one-whole class for mobile-first implementations
-        width: 100%;
-    }
+#{$gel-class-prefix}grid-wrapper--bothsides {
+    margin-left: -$gel-grid-gutter-basic-half;
+    margin-right: -$gel-grid-gutter-basic-half;
 
     #{$gel-class-prefix}grid__inner {
-        padding-left: $gel-grid-gutter-basic;
-
-        // Reset whitespace spacing
-        letter-spacing: normal;
-        word-spacing: normal;
-        text-rendering: auto;
+        padding-left: $gel-grid-gutter-basic-half;
+        padding-right: $gel-grid-gutter-basic-half;
     }
+}
 
-    #{$gel-class-prefix}grid-wrapper--center {
-        text-align: center;
+// Faux column pushdown
+$massive-pushdown: 50em;
 
-        > #{$gel-class-prefix}grid {
-            text-align: left;
-        }
-    }
+#{$gel-class-prefix}grid-wrapper--fauxcolumn {
+    overflow: hidden;
 
-    #{$gel-class-prefix}grid-wrapper--bothsides {
-        margin-left: -$gel-grid-gutter-basic-half;
-        margin-right: -$gel-grid-gutter-basic-half;
-
-        #{$gel-class-prefix}grid__inner {
-            padding-left: $gel-grid-gutter-basic-half;
-            padding-right: $gel-grid-gutter-basic-half;
-        }
-    }
-
-    // Faux column pushdown
-    $massive-pushdown: 50em;
-
-    #{$gel-class-prefix}grid-wrapper--fauxcolumn {
-        overflow: hidden;
-
-        #{$gel-class-prefix}grid__inner {
-            margin-bottom: -$massive-pushdown;
-            padding-bottom: $massive-pushdown;
-        }
-    }
-
-    .fauxcolumn {
+    #{$gel-class-prefix}grid__inner {
         margin-bottom: -$massive-pushdown;
         padding-bottom: $massive-pushdown;
     }
 }
 
-@include breakup-breakpoint('bpw') {
+.fauxcolumn {
+    margin-bottom: -$massive-pushdown;
+    padding-bottom: $massive-pushdown;
+}
+
+@include mq-range('bpw') {
     #{$gel-class-prefix}grid-wrapper {
         margin-left: -$gel-grid-gutter-wide;
     }
@@ -177,12 +175,10 @@ $gel-grid-gutter-wide-half: $gel-grid-gutter-wide / 2;
 
 }
 
-@include breakup-block('basic') {
-    @include gel-gutterwidths-setup('');
-}
+@include gel-gutterwidths-setup('');
 
 @each $name in ($gel-widths-breakpoints) {
-    @include breakup-breakpoint($name) {
+    @include mq-range($name) {
         @include gel-gutterwidths-setup('#{$name}-');
     }
 }
