--- a/resources/assets/sass/gel/objects/_hidden.scss
+++ b/resources/assets/sass/gel/objects/_hidden.scss
@@ -18,15 +18,13 @@
     }
 }
 
-@include breakup-block('basic') {
-    @include gel-hidden-setup();
-}
+@include gel-hidden-setup();
 
 /**
  * Generate media-query scoped grids for each breakpoint name defined
  */
 @each $name in $gel-widths-breakpoints {
-    @include breakup-breakpoint($name) {
+    @include mq-range($name) {
         @include gel-hidden-setup('#{$name}-');
     }
 }
