--- a/resources/assets/sass/module/_pagination.scss
+++ b/resources/assets/sass/module/_pagination.scss
@@ -7,52 +7,50 @@
  * more pages as the viewport size increases.
  */
 
-@include breakup-block('basic') {
-    .pagination {
-        margin-bottom: $basic-spacing;
-    }
+.pagination {
+    margin-bottom: $basic-spacing;
+}
 
-    .pagination a:hover,
-    .pagination a:active,
-    .pagination a:focus {
-        text-decoration: none;
-    }
+.pagination a:hover,
+.pagination a:active,
+.pagination a:focus {
+    text-decoration: none;
+}
 
-    .pagination__next {
-        // -1px on the margin-left to account for the adjacent page / spacer margin
-        margin: 0 $basic-spacing 0 ($basic-spacing - 1px);
-    }
+.pagination__next {
+    // -1px on the margin-left to account for the adjacent page / spacer margin
+    margin: 0 $basic-spacing 0 ($basic-spacing - 1px);
+}
 
-    .pagination__previous {
-        // -1px on the margin-right to account for the adjacent page / spacer margin
-        margin: 0 ($basic-spacing - 1px) 0 $basic-spacing;
-    }
+.pagination__previous {
+    // -1px on the margin-right to account for the adjacent page / spacer margin
+    margin: 0 ($basic-spacing - 1px) 0 $basic-spacing;
+}
 
-    // Nested in a .pagination class to trump the "nav > li" styles
-    .pagination {
-        .pagination__page,
-        .pagination__spacer {
-            display: none;
-            margin: 0 1px;
-            text-align: center;
-        }
-    }
-
-    .pagination__page a,
-    .pagination__page span,
-    .pagination__spacer span {
-        display: block;
-        width: px-to-em(38px, 14px);
-        padding: px-to-em(10px, 14px) 0;
-    }
-
-    .pagination__page--disabled {
-        opacity: 0.8;
+// Nested in a .pagination class to trump the "nav > li" styles
+.pagination {
+    .pagination__page,
+    .pagination__spacer {
+        display: none;
+        margin: 0 1px;
+        text-align: center;
     }
 }
 
+.pagination__page a,
+.pagination__page span,
+.pagination__spacer span {
+    display: block;
+    width: mq-px2em(38px, 14px);
+    padding: mq-px2em(10px, 14px) 0;
+}
+
+.pagination__page--disabled {
+    opacity: 0.8;
+}
+
 // TODO use bespoke breakpoint for this
-@include breakup-breakpoint('bpb1') {
+@include mq-range('bpb1') {
     // Show the first, last and current pages
     // Nested in a .pagination class to trump the "nav > li" styles
     .pagination {
@@ -72,7 +70,7 @@
 }
 
 // TODO use bespoke breakpoint for this
-@include breakup-breakpoint('bpb2') {
+@include mq-range('bpb2') {
     // Show two pages either side of the current page
     .pagination {
         .pagination__page--offset1,
@@ -82,7 +80,7 @@
     }
 }
 
-@include breakup-breakpoint('bpw') {
+@include mq-range('bpw') {
     .pagination {
         margin-bottom: $wide-spacing;
 
@@ -99,7 +97,7 @@
     }
 }
 
-@include breakup-tweakpoint('(min-width: #{px-to-em(600px)}) and (max-width: #{px-to-em(769px)})', 'bpw1') {
+@include mq($from: 'gel3', $until: 'gel3b') {
     // Hide the next/previous text, so only the arrow is displayed
     .pagination__next span,
     .pagination__previous span {
@@ -107,7 +105,7 @@
     }
 }
 
-@include breakup-breakpoint('bpe') {
+@include mq-range('bpe') {
     // Show all pages by default
     // Nested in a .pagination class to trump the "nav > li" styles
     .pagination {
