--- a/templates/home/show.html.twig
+++ b/templates/home/show.html.twig
@@ -25,8 +25,7 @@
 {% macro blog(blog) %}
     <div itemscope itemtype="http://schema.org/Blog">
         <a class="island br-box-page br-page-linkhover-onbg015--hover"
-           itemprop="url">
-            {#href="/blogs/{{ blog.urlKey }}"> todo - use url helper#}
+           itemprop="url" href="{{ path('blog', {blogId: blog.getId()|replace({'blogs-': ''}) }) }}">
             <div class="grid-wrapper">
                 <div class="grid 1/3@bpb2 1/3@bpw 1/4@bpw2 1/5@bpe">
                     <img class="rsp-img" itemprop="image" src="{{ blog.image.getUrl(160, 90) }}" alt="">
