Only load the oldIE stylesheet in oldIE

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,9 +22,9 @@
     <!--[if (gt IE 8)|!(IE)]><!-->
     <link rel="stylesheet" href="{{ asset('css/main.css') }}"/>
     <!--<![endif]-->
-    <!--[if (lt IE 9)&(!IEMobile)]><!-->
+    <!--[if (lt IE 9)&(!IEMobile)]>
     <link rel="stylesheet" href="{{ asset('css/main-ie.css') }}"/>
-    <!--<![endif]-->
+    <![endif]-->
     {% block inline_head %}{% endblock %}
 
     <script>document.documentElement.className += ' has-js';</script>
