--- a/resources/assets/sass/_components.scss
+++ b/resources/assets/sass/_components.scss
@@ -34,6 +34,7 @@
 @import 'objects/playout';
 @import 'objects/counted-list';
 @import 'objects/letters';
+@import 'Ds/Molecule/Image/image';
 // Modules
 //@import 'module/secondary-navigation';
 //@import 'module/sidebar';
