Use explicit function calls where possible
Twig has to do extra work if you don't explictly say "hey this is a
function call". Avoid doing that to make pages slightly faster.

--- a/templates/home/show.html.twig
+++ b/templates/home/show.html.twig
@@ -28,12 +28,12 @@
            itemprop="url" href="{{ path('blog', {blogId: blog.getId()|replace({'blogs-': ''}) }) }}">
             <div class="grid-wrapper">
                 <div class="grid 1/3@bpb2 1/3@bpw 1/4@bpw2 1/5@bpe">
-                    {{ ds('image', blog.image, 160, {480: 1/3, 770: 1/4, 1008: '170px'}, {'is_lazy_loaded': false}) }}
+                    {{ ds('image', blog.getImage(), 160, {480: 1/3, 770: 1/4, 1008: '170px'}, {'is_lazy_loaded': false}) }}
                 </div>
                 <div class="grid 2/3@bpb2 2/3@bpw 3/4@bpw2 4/5@bpe">
-                    <h3 class="delta no-margin" itemprop="name">{{ blog.name }}</h3>
+                    <h3 class="delta no-margin" itemprop="name">{{ blog.getName() }}</h3>
                     <div class="br-page-text-ontext deemphasize" itemprop="description">
-                        {{ blog.getShortSynopsis }}
+                        {{ blog.getShortSynopsis() }}
                     </div>
                 </div>
             </div>
