--- a/templates/blogs_base.html.twig
+++ b/templates/blogs_base.html.twig
@@ -9,10 +9,7 @@
         </div>
         <div class="grid 1/3@bpw2 1/3@bpe">
             <aside>
-                <div class="sidebox component br-box-subtle">
-                    <h2 class="island--squashed br-box-highlight no-margin">About Module</h2>
-                    <div class="grid-wrapper"></div>
-                </div>
+                {{ ds('aboutModule', blog) }}
                 <div class="sidebox component br-box-subtle">
                     <h2 class="island--squashed br-box-highlight no-margin">Updates Module</h2>
                     <div class="grid-wrapper"></div>
