Damn you case sensitivity

--- a/src/Ds/_ds-components.scss
+++ b/src/Ds/_ds-components.scss
@@ -38,9 +38,6 @@
 // Modules
 //@import 'module/secondary-navigation';
 //@import 'module/sidebar';
-@import 'Core/module/pagination';
-@import 'Core/module/bbc-datepicker';
-@import 'Core/module/loader';
-
-
-
+@import 'Core/Module/pagination';
+@import 'Core/Module/bbc-datepicker';
+@import 'Core/Module/loader';
