--- a/templates/blogs_base.html.twig
+++ b/templates/blogs_base.html.twig
@@ -18,10 +18,9 @@
                     <h2 class="island--squashed br-box-highlight no-margin">Recently Commented Module</h2>
                     <div class="grid-wrapper"></div>
                 </div>
-                <div class="sidebox component br-box-subtle">
-                    <h2 class="island--squashed br-box-highlight no-margin">Other Modules</h2>
-                    <div class="grid-wrapper"></div>
-                </div>
+                {% for module in blog.getModules() %}
+                    {{ ds('freeTextModule', module) }}
+                {% endfor %}
                 <div class="sidebox component br-box-subtle">
                     <h2 class="island--squashed br-box-highlight no-margin">Latest Tags Module</h2>
                     <div class="grid-wrapper"></div>
