--- a/templates/home/show.html.twig
+++ b/templates/home/show.html.twig
@@ -25,7 +25,7 @@
 {% macro blog(blog) %}
     <div itemscope itemtype="http://schema.org/Blog">
         <a class="island br-box-page br-page-linkhover-onbg015--hover"
-           itemprop="url" href="{{ path('blog', {blogId: blog.getId()|replace({'blogs-': ''}) }) }}">
+           itemprop="url" href="{{ path('blog', {blogId: blog.getId()}) }}">
             <div class="grid-wrapper">
                 <div class="grid 1/3@bpb2 1/3@bpw 1/4@bpw2 1/5@bpe">
                     {{ ds('image', blog.getImage(), 160, {480: 1/3, 770: 1/4, 1008: '170px'}) }}
