--- a/templates/blogs_base.html.twig
+++ b/templates/blogs_base.html.twig
@@ -18,8 +18,8 @@
                     <h2 class="island--squashed br-box-highlight no-margin">Recently Commented Module</h2>
                     <div class="grid-wrapper"></div>
                 </div>
-                {% for module in blog.getModules() %}
-                    {{ ds('freeTextModule', module) }}
+                {% for modulePresenter in modulePresenters %}
+                    {{ ds_presenter(modulePresenter) }}
                 {% endfor %}
                 <div class="sidebox component br-box-subtle">
                     <h2 class="island--squashed br-box-highlight no-margin">Latest Tags Module</h2>
