--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -1,6 +1,53 @@
 {% extends 'blogs_base.html.twig' %}
 
-{% block title %}BBC {{ tr('page_title_blogs') }} - {{ blog.getName() }}{% endblock %}
+{% block title %}BBC {{ tr('page_title_blogs') }} - {{ blog.getName() }} - {{ post.getTitle() }}{% endblock %}
+
+{% block inline_head %}
+    <meta property="og:type" content="article" />
+    <meta name="twitter:card" content="summary">
+
+    {# BLOG #}
+    {%- if blog.getSocial().getTwitterUsername() -%}
+        <meta name="twitter:site" content="{{ blog.getSocial().getTwitterUsername() }}">
+    {%- endif -%}
+    {%- if blog.getSocial().getGooglePlusUrl() -%}
+        <link rel="publisher" href="{{ blog.getSocial().getGooglePlusUrl() }}"/>
+    {%- endif -%}
+
+    <meta property="og:site_name" content="{{ blog.getName() }}" />
+
+    {# POST #}
+    <meta itemprop="name" content="{{ post.getTitle() }}">
+    <meta name="twitter:title" content="{{ post.getTitle() }}">
+    <meta property="og:title" content="{{ post.getTitle() }}" />
+    <meta property="article:published_time" content="{{ post.getPublishedDate() | date(constant('DATE_W3C')) }}" />
+    <meta property="og:url" content="{{ url('post', {blogId: blog.getId(), guid: post.getGuid()}) }}" />
+
+    {%- if post.getShortSynopsis() -%}
+        <meta itemprop="description" content="{{ post.getShortSynopsis() }}">
+        <meta name="twitter:description" content="{{ post.getShortSynopsis() }}">
+        <meta property="og:description" content="{{ post.getShortSynopsis() }}" />
+    {%- endif -%}
+
+    {%- if post.getImage() -%}
+        <meta itemprop="image" content="{{ post.getImage().getUrl(1200,675) }}">
+        <meta property="og:image" content="{{ post.getImage().getUrl(1200,675) }}" />
+    {%- endif -%}
+
+    {# AUTHOR SOCIAL #}
+    {%- set author = post.getAuthor() -%}
+    {%- if author is not empty -%}
+        {%- if author.getSocial().getGooglePlusUrl() -%}
+            <link rel="author" href="{{ author.getSocial().getGooglePlusUrl() }}"/>
+        {%- endif -%}
+        {%- if author.getSocial().getFacebookUrl() -%}
+            <meta property="article:author" content="{{ author.getSocial().getFacebookUrl() }}" />
+        {%- endif -%}
+        {%- if author.getSocial().getTwitterUsername() -%}
+            <meta name="twitter:creator" content="{{ author.getSocial().getTwitterUsername() }}">
+        {%- endif -%}
+    {%- endif -%}
+{% endblock %}
 
 {% block content %}
     <div class="islet br-box-subtle component text--right">
